Par securitée j'ignore aussi les .zip, .pdf et .pptx pour eviter d'ajouter les fichiers de la presentation

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
+*.zip
+*.pdf
+*.pptx
+
+# ========= from https://github.com/jupyter/notebook/blob/main/.gitignore =========
 *.bundle.*
 lib/
 node_modules/
