--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
+*.zip
+*.pdf
+*.pptx
+*.csv
+
+# ========= from https://github.com/jupyter/notebook/blob/main/.gitignore =========
 *.bundle.*
 lib/
 node_modules/
